--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.cdnfonts.com/css/switzer');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -83,6 +85,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Inter', sans-serif;
 }
 
 body {
